<resources>
    <string name="app_name" translatable="false">CATalyst-dev</string>
    <string-array name="notifications_no">
        <item>30</item>
        <item>50</item>
        <item>100</item>
        <item>200</item>
        <item>400</item>
    </string-array>
    <string-array name="request_types">
        <item>Purchasing</item>
        <item>Printing</item>
        <item>Production</item>
        <item>Photography</item>
        <item>Extras</item>
    </string-array>
    <string-array name="request_types_for_extra_requests">
        <item>Purchasing</item>
        <item>Printing</item>
        <item>Production</item>
        <item>Photography</item>
    </string-array>
    <string-array name="currency">
        <item>EGP</item>
        <item>USD</item>
        <item>SR</item>
        <item>AED</item>
    </string-array>
    <string-array name="job_orders_steps">
        <item>Job Order\nCreation</item>
        <item>Sales\nApproval</item>
        <item>Magdy\nApproval</item>
        <item>Hisham\nApproval</item>
    </string-array>
    <string-array name="request_steps">
        <item>Request\nCost</item>
        <item>Nagat\nApproval</item>
        <item>Sales\nApproval</item>
    </string-array>
    <string-array name="countries">
        <item>Select Country</item>
        <item>Egypt</item>
        <item>UAE</item>
        <item>KSA</item>
    </string-array>
    <string-array name="payment">
        <item>Select Payment</item>
        <item>Cash</item>
        <item>Bank Transfer</item>
    </string-array>
    <string name="sign_in">Sign In</string>
    <string name="or_sign_up_if_you_are_new">Or sign up if you are new !</string>
    <string name="sign_up">Sign Up</string>
    <string name="img_description">description</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="please_login_to_your_account">Please login to your account.</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="requests">Requests</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="empty" />
    <string name="type_to_search">Type to search</string>
    <string name="my_requests">My Requests</string>
    <string name="need_my_approval">Need my Approval</string>
    <string name="language">Language</string>
    <string name="your_name">Your Name</string>
    <string name="location">Location</string>
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="arabic">العربيه</string>
    <string name="done">Done</string>
    <string name="network_error">Network Error</string>
    <string name="fill_fields">Please ,fill all fields</string>
    <string name="production">Production</string>
    <string name="printing">Printing</string>
    <string name="purchasing">Purchasing</string>
    <string name="contact_person">CONTACT PERSON</string>
    <string name="client">CLIENT</string>
    <string name="description">Description</string>
    <string name="status">STATUS</string>
    <string name="qty">QTY</string>
    <string name="new_purchase_request">New Purchase Request</string>
    <string name="new_printing_request">New Printing Request</string>
    <string name="new_production_request">New Production Request</string>
    <string name="client_add">Client</string>
    <string name="client_name">Client Name</string>
    <string name="contact_person_add">Contact Person</string>
    <string name="select_country">Select Country</string>
    <string name="job_name">Job Name</string>
    <string name="line_item">Line Item</string>
    <string name="quantity">Quantity</string>
    <string name="items_with_description">Items with Description</string>
    <string name="finish_branding">Finish/Branding</string>
    <string name="packaging">Packaging</string>
    <string name="delivery">Delivery</string>
    <string name="inside_cairo">Inside Cairo</string>
    <string name="outside_cairo">Outside Cairo</string>
    <string name="specify">Specify</string>
    <string name="special_requirements">Special Requirements</string>
    <string name="reference">Reference</string>
    <string name="send_request">Send Request</string>
    <string name="choose_image">Choose Image</string>
    <string name="pages">Pages</string>
    <string name="paper_weight">Paper Weight</string>
    <string name="colors">Colors</string>
    <string name="lamination">Lamination</string>
    <string name="matte">Matte</string>
    <string name="glossy">Glossy</string>
    <string name="none">None</string>
    <string name="binding">Binding</string>
    <string name="wire">Wire</string>
    <string name="staple">Staple</string>
    <string name="di_cut">Di-Cut</string>
    <string name="venue">Venue</string>
    <string name="days_number">Days Number</string>
    <string name="requested_date">Requested Date</string>
    <string name="screen">Screen</string>
    <string name="lights">Lights</string>
    <string name="sound">Sound</string>
    <string name="request_details">Request Details</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="new_quotation">New Quotation</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="cost">Cost</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="storage">Storage</string>
    <string name="assembly_dismantling">Assembly Dismantling</string>
    <string name="notes">Notes</string>
    <string name="add_quotation">Add Quotation</string>
    <string name="printing_type">Printing Type</string>
    <string name="purchasing_type">Purchasing type</string>
    <string name="view_quotations">View Quotations</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="quotations">Quotations</string>
    <string name="select_payment_type">Select Payment Type</string>
    <string name="created_by">Created By</string>
    <string name="company_name">Company Name</string>
    <string name="po_number">PO Number</string>
    <string name="po_number_text">if Quotation approved ,please mention below</string>
    <string name="submit">Submit</string>
    <string name="rejection_reason">Rejection Reason</string>
    <string name="po_attach">PO Attach</string>
    <string name="projects">Projects</string>
    <string name="content_description">content description</string>
    <string name="all_projects">All Projects</string>
    <string name="project_name">Project Name</string>
    <string name="photography">Photography</string>
    <string name="service_type">Service Type</string>
    <string name="new_request">New Request</string>
    <string name="item_name">Item Name</string>
    <string name="digital">Digital</string>
    <string name="offset">Offset</string>
    <string name="print_type">Print Type</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="attach_file">Attach File</string>
    <string name="choose_file">Choose File</string>
    <string name="no_file_choose">No file choose</string>
    <string name="add_new_project">Add New Project</string>
    <string name="client_company">Client Company</string>
    <string name="project_timeline">Project TimeLine</string>
    <string name="sales_contact">Sales Contact</string>
    <string name="manage_this_project_by_myself">Manage this project by myself</string>
    <string name="add">Add</string>
    <string name="designer_in_charge">Designer in charge</string>
    <string name="login">Login</string>
    <string name="job_orders">Job Orders</string>
    <string name="dimensions">Dimensions</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="color">Color</string>
    <string name="material">Material</string>
    <string name="branding">Branding</string>
    <string name="brand">Brand</string>
    <string name="days">Days</string>
    <string name="project_type">Project Type</string>
    <string name="number_of_cameras">Number Of Cameras</string>
    <string name="lighting">Lighting</string>
    <string name="chroma">Chroma</string>
    <string name="props">Props</string>
    <string name="successfully_added">Successfully Added</string>
    <string name="track_your_request">Track Your Request</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="add_supplier_cost">Add Supplier Cost</string>
    <string name="job_order_details">Job Order Details</string>
    <string name="request_po_number">Request PO Number</string>
    <string name="timeline">TimeLine</string>
    <string name="view_requests">View Requests</string>
    <string name="cancel">Cancel</string>
    <string name="test_text">Laurem epsum</string>
    <string name="test_date">17/11/2021</string>
    <string name="request_cost">Request Cost</string>
    <string name="designer">DESIGNER</string>
    <string name="camera_type">Camera Type</string>
    <string name="no_supplier_cost">There’s no Supplier Cost \nadded yet</string>
    <string name="job_order_number">Job Order Number</string>
    <string name="new_job_order">New Job Order</string>
    <string name="request_id">Request Id :</string>
    <string name="final_cost">Final Cost :</string>
    <string name="create_job_order">Create Job Order</string>
    <string name="screen_specs">Screen Specs</string>
    <string name="job_order">Job Order</string>
    <string name="download">Download</string>
    <string name="hold">Hold</string>
    <string name="ceo_approval">CEO Approval</string>
    <string name="edit_supplier_cost">Edit Supplier Cost</string>
    <string name="no_attachments">No Attachments</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="change_password">Change Password</string>
    <string name="your_password">Your Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="your_email">Your email</string>
    <string name="all_companies">All Companies</string>
    <string name="select_company">Select Company</string>
    <string name="add_company">Add Company</string>
    <string name="log_out">Log Out</string>
    <string name="total">Total</string>
    <string name="per_unit">Per Unit</string>
    <string name="cost_unit_total">Cost unit/total</string>
    <string name="qtyy">Qty :</string>
    <string name="unit_cost">Unit Cost</string>
    <string name="request_name">Request Name</string>
    <string name="select_supplier">Select Supplier</string>
    <string name="preview">Preview</string>
    <string name="company">Company</string>
    <string name="quotation_napproved">Quotation\nApproved</string>
    <string name="sample_nrequest">Sample\nRequest</string>
    <string name="po_nnumber">PO\nNumber</string>
    <string name="edit_po_number">Edit PO Number</string>
    <string name="all_job_orders">All Job Orders</string>
    <string name="edit_job_order">Edit Job Order</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="resume">Resume</string>
    <string name="edit_request">Edit Request</string>
    <string name="update_request">Update Request</string>
    <string name="extras">Extras</string>
    <string name="add_request">Add Request</string>
    <string name="add_extras_request">Add Extras Request</string>
    <string name="quantity_of_logos">Quantity of logos</string>
    <string name="final_deliverables">Final deliverables</string>
    <string name="read_all">Read All</string>
    <string name="statistics">Statistics</string>
    <string name="users">Users</string>
</resources>