<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_projects"
        android:icon="@drawable/ic_projects"
        android:title="@string/projects" />
    <item
        android:id="@+id/navigation_job_orders"
        android:icon="@drawable/ic_job_orders"
        android:title="@string/job_orders" />

    <item
        android:id="@+id/navigation_all_requests"
        android:icon="@drawable/ic_job_orders"
        android:title="@string/requests" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications" />

<!--    <item-->
<!--        android:id="@+id/navigation_settings"-->
<!--        android:icon="@drawable/ic_settings"-->
<!--        android:title="@string/settings"-->
<!--        android:visible="false"/>-->

</menu>