<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp">

    <ImageView
        android:id="@+id/img_close"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_gravity="end"
        android:src="@drawable/ic_close"
        app:tint="@color/black"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/change_language"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">


        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/english"
            android:textColor="@color/gray"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_ar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/arabic"
            android:textColor="@color/gray"
            android:textSize="18sp" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_yellow"
        android:text="@string/done"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"/>

</LinearLayout>
